Add /api to the routes
